--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,49 @@
   <name>DevOpsHelloWorld Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
+  
+  
+  
+  <plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>${jacoco.version}</version>
+    <executions>
+        <execution>
+            <id>jacoco-initialize</id>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>jacoco-site</id>
+            <phase>package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+  
+  
+  
+  
+  
   <properties>
   <sonar.organization>yogesh9630</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    
+    <!-- JaCoCo Properties -->
+    <jacoco.version>0.8.6</jacoco.version>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+    <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+    <sonar.language>java</sonar.language>
+    
 </properties>
+  
+  
+  
 
   
   
@@ -22,6 +61,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    
+    <dependency>
+    <groupId>org.jacoco</groupId> 
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.6</version>
+</dependency>
+    
   </dependencies>
   <build>
     <finalName>DevOpsHelloWorld</finalName>
