--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
   </dependencies>
   <build>
     <finalName>DevOpsHelloWorld</finalName>
-    
+    <plugins>
      <plugin>
     <groupId>org.jacoco</groupId>
     <artifactId>jacoco-maven-plugin</artifactId>
@@ -69,7 +69,7 @@
         </execution>
     </executions>
 </plugin>
-  
+  </plugins>
     
   </build>
 </project>
