--- a/pom.xml
+++ b/pom.xml
@@ -46,30 +46,33 @@
 </dependency>
     
   </dependencies>
+  
+  <profile>
+  <id>coverage</id>
   <build>
-    <finalName>DevOpsHelloWorld</finalName>
-    <plugins>
-     <plugin>
-    <groupId>org.jacoco</groupId>
-    <artifactId>jacoco-maven-plugin</artifactId>
-    <version>${jacoco.version}</version>
-    <executions>
+   <plugins>
+    <plugin>
+      <groupId>org.jacoco</groupId>
+     <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.7</version>
+      <executions>
         <execution>
-            <id>jacoco-initialize</id>
-            <goals>
-                <goal>prepare-agent</goal>
-            </goals>
+          <id>prepare-agent</id>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
         </execution>
         <execution>
-            <id>jacoco-site</id>
-            <phase>package</phase>
-            <goals>
-                <goal>report</goal>
-            </goals>
+          <id>report</id>
+          <goals>
+            <goal>report</goal>
+          </goals>
+          <configuration>
+            <formats>
+              <format>XML</format>
+            </formats>
+          </configuration>
         </execution>
-    </executions>
-</plugin>
-  </plugins>
-    
-  </build>
+      </executions>
+    </profile>
 </project>
