--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
       <scope>test</scope>
     </dependency> -->
     
-    
+<!--     
     <dependency>
     <groupId>org.jacoco</groupId> 
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.8.6</version>
-</dependency>
+</dependency> -->
     
   </dependencies>
   
