--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   
   
-  <dependencies>
+<!--   <dependencies>
 <!--     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -46,7 +46,7 @@
 </dependency> -->
     
   </dependencies>
-  
+   -->
   <profile>
   <id>coverage</id>
   <build>
