--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: testing
-      run: "echo ${{ secrets.TESTING }}"
+      run: 'echo ${{ secrets.TESTING }}'
