--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,4 +30,8 @@ jobs:
       env:
         test: ${{ secrets.TESTING }}
     - name: testing
-      run: "echo $test"
+      run: |
+        "echo $test"
+        echo $test
+        'echo $test'
+        $test
