--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         test: ${{ secrets.TESTING }}
     - name: testing
-      run: echo ${{ secrets.TESTING }}
+      run: echo "MY_SECRET:${{ secrets.TESTING }}
       
     - name: Set secret as env variable
       run: |
