--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Set secret as env variable
       run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TEMP }}
-          echo docker login
+          docker login
           echo "{{ vars.VARIABLE }}"
           echo "Setting MY_SECRET environment variable"
           echo "::set-env name=MY_SECRET::${{secrets.TESTING}}"
