--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,12 +28,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
       
+      env:
+        PR_NUMBER: ${{ github.event.pull_request.number }}
+      
     - name: Set secret as env variable
-      run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TEMP }}
-          docker login
-          echo "{{ vars.VARIABLE }}"
-          echo "Setting MY_SECRET environment variable"
-          echo "::set-env name=MY_SECRET::${{secrets.TESTING}}"
-          echo "MY_SECRET=${{secrets.MY_SECRET}}"
-          echo "MY_SECRET environment variable value: $MY_SECRET"
+      run: echo $PR_NUMBER
+        
