--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,6 @@ jobs:
         PR_NUMBER: ${{ github.event.pull_request.number }}
     
     - name: publish HTML report
-      run: sh scripts/ci-e2e-publish.sh
+      run: sh testing.sh
       continue-on-error: true
         
