--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,10 +33,8 @@ jobs:
       run: |
        echo "build_number=${{ github.run_number }}" >> $GITHUB_ENV
        echo "pull_request_number=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-       branch_name=$(echo $GITHUB_REF | sed 's/refs\/heads\///')
-       echo "Setting branch name to $branch_name"
-       echo "BRANCH_NAME=$branch_name" >> $GITHUB_ENV
-       echo $BRANCH_NAME
+       echo "BRANCH_NAME=${{ github.ref }}" >> $GITHUB_ENV
+
       
     - name: Run Shell Script
       run: |
