--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,5 +51,5 @@ jobs:
        ls -l
        cat testing.sh
        
-    - name: Display Secret
-      run: echo ${{ secrets.DEV }}
+    - name: Dokcer login
+      run: docker login -u ${{ DOCKER_USERNAME }} -p {{ DOCKER_PASSWORD }}
