--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,4 +40,4 @@ jobs:
        cat testing.sh
        
     - name: Dokcer login
-      run: docker login -u ${{ DOCKER_USERNAME }} -p {{ DOCKER_PASSWORD }}
+      run: docker login -U ${{ DOCKER_USERNAME }} -P ${{ DOCKER_PASSWORD }}
