--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,4 +40,6 @@ jobs:
        cat testing.sh
        
     - name: Dokcer login
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      run: |
+       docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+       echo ${{ secrets.DOCKER_USERNAME }}
